# i3utils

./: Cargo.toml  LICENSE  README.md
.github/actions/cargo/: Dockerfile  action.yaml  entrypoint.sh
.github/actions/docker/: action.yaml
.github/actions/rust-centos/: Dockerfile  action.yaml
.github/workflows/: build.yaml
.rpm/: i3utils.spec  tools.spec
src/: lib.rs
src/i3/: core.rs  mod.rs
src/sys/: audio.rs  mod.rs  monitor.rs  xwindow.rs
