[package]
name = "i3utils"
version = "1.0.0"
authors = ["r7a"]
edition = "2021"
description = "tools"
license = "MIT"

[dev-dependencies]
speculate = "*"
mockito = "*"
hamcrest = "*"
quickcheck = "*"
quickcheck_macros = "*"

[dependencies]
## common
anyhow = "*"
clap = { version = "*", features = ["derive"] }
directories = "*"
duct = "*"
env_logger = "*"
lazy_static = "*"
log = '*'
regex = "*"
lazy-regex = "*"
## displayctl
xcb = "*"
## volumectl.rs
#pipewire = "*"
## i3ctl
i3ipc = "*"
json = "*"

[package.metadata.rpm]
package = "i3utils"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
volumectl = { path = "/usr/bin/volumectl" }
displayctl = { path = "/usr/bin/displayctl" }
i3ctl = { path = "/usr/bin/i3ctl" }
